--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -973,3 +973,35 @@ ul {
   background-color: #dc3545;
   color: white;
 }
+
+/* account */
+.nav-pills .nav-link {
+  background-color: #6c757d; /* Màu xám */
+  color: white;
+}
+.nav-pills .nav-link.active {
+  background-color: #28a745; /* Màu xanh lá */
+}
+.nav-pills .nav-link.disabled {
+  background-color: #ced4da; /* Màu xám nhạt */
+  color: #6c757d;
+}
+
+.fixed-size {
+  max-height: 400px; /* Set the desired fixed height */
+  overflow-y: auto; /* Add vertical scrollbar if content exceeds */
+}
+
+@media (max-width: 768px) {
+  aside {
+    width: 70px !important;
+    height: 100vh;
+  }
+  aside .d-flex.align-items-center span {
+    display: none; /* Ẩn text */
+  }
+  aside ul li a {
+    justify-content: center;
+    text-align: center;
+  }
+}
