--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -377,6 +377,12 @@ ul {
   margin-bottom: 15px;
 }
 
+#username-feedback,
+#email-feedback {
+  display: none;
+  align-items: center;
+}
+
 .input {
   border-radius: 20px;
   border: 1px solid #c0c0c0;
@@ -408,7 +414,7 @@ ul {
 
 .sign-up-label {
   margin: 0;
-  font-size: 10px;
+  font-size: 14px;
   color: #747474;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -416,14 +422,16 @@ ul {
 
 .sign-up-link {
   margin-left: 1px;
-  font-size: 11px;
-  text-decoration: underline;
-  text-decoration-color: #184e8e;
+  font-size: 14px;
+  text-decoration: none;
   color: #184e8e;
   cursor: pointer;
   font-weight: 800;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+.sign-up-link:hover {
+  text-decoration: underline;
 }
 
 .buttons-container {
@@ -922,6 +930,183 @@ ul {
 .copyright {
   color: #999999;
 }
+
+/* ______________________Register__________________________ */
+/* From Uiverse.io by guilhermeyohan */
+.checkbox-wrapper-31:hover .check {
+  stroke-dashoffset: 0;
+}
+.checkbox-wrapper-31 {
+  position: relative;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+}
+.checkbox-wrapper-31 .background {
+  fill: #ccc;
+  transition: ease all 0.6s;
+  -webkit-transition: ease all 0.6s;
+}
+.checkbox-wrapper-31 .stroke {
+  fill: none;
+  stroke: #fff;
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+  stroke-dashoffset: 100;
+  stroke-dasharray: 100;
+  transition: ease all 0.6s;
+  -webkit-transition: ease all 0.6s;
+}
+.checkbox-wrapper-31 .check {
+  fill: none;
+  stroke: #fff;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2px;
+  stroke-dashoffset: 22;
+  stroke-dasharray: 22;
+  transition: ease all 0.6s;
+  -webkit-transition: ease all 0.6s;
+}
+.checkbox-wrapper-31 input[type="checkbox"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  margin: 0;
+  opacity: 0;
+  -appearance: none;
+  -webkit-appearance: none;
+}
+.checkbox-wrapper-31 input[type="checkbox"]:hover {
+  cursor: pointer;
+}
+.checkbox-wrapper-31 input[type="checkbox"]:checked + svg .background {
+  fill: #6cbe45;
+}
+.checkbox-wrapper-31 input[type="checkbox"]:checked + svg .stroke {
+  stroke-dashoffset: 0;
+}
+.checkbox-wrapper-31 input[type="checkbox"]:checked + svg .check {
+  stroke-dashoffset: 0;
+}
+/* From Uiverse.io by Fernando-sv */
+.loader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: transparent;
+  border-radius: 50%;
+}
+.loader {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: transparent;
+  width: 20px;
+  height: 20px;
+}
+.loader {
+  border: 4px solid rgba(0, 0, 255, 0.1); /* Light blue background */
+  border-left-color: blue; /* Spinner color */
+  width: 20px;
+  height: 20px;
+  animation: spin89345 1s linear infinite;
+}
+@keyframes spin89345 {
+  to {
+    transform: rotate(360deg);
+  }
+}
+.error-svg {
+  color: #f87171;
+  width: 1.25rem;
+  height: 1.25rem;
+}
+/* ______________________Register__________________________ */
+
+/* ______________________Forgot password form __________________________ */
+.forgotPassword-form-container {
+  max-width: 400px;
+  background-color: #fff;
+  padding: 32px 24px;
+  font-size: 14px;
+  font-family: inherit;
+  color: #212121;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  border-radius: 10px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.084), 0px 2px 3px rgba(0, 0, 0, 0.168);
+}
+.forgotPassword-form-container button:active {
+  scale: 0.95;
+}
+.forgotPassword-form-container .logo-container {
+  text-align: center;
+  font-weight: 600;
+  font-size: 18px;
+}
+.forgotPassword-form-container .form {
+  display: flex;
+  flex-direction: column;
+}
+.forgotPassword-form-container .form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+.forgotPassword-form-container .form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+.forgotPassword-form-container .form-group input {
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 6px;
+  font-family: inherit;
+  border: 1px solid #ccc;
+}
+.forgotPassword-form-container .form-group input::placeholder {
+  opacity: 0.5;
+}
+.forgotPassword-form-container .form-group input:focus {
+  outline: none;
+  border-color: #1778f2;
+}
+.forgotPassword-form-container .form-submit-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: inherit;
+  color: #fff;
+  background-color: #212121;
+  border: none;
+  width: 100%;
+  padding: 12px 16px;
+  font-size: inherit;
+  gap: 8px;
+  margin: 12px 0;
+  cursor: pointer;
+  border-radius: 6px;
+  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.084), 0px 2px 3px rgba(0, 0, 0, 0.168);
+}
+.forgotPassword-form-container .form-submit-btn:hover {
+  background-color: #313131;
+}
+.forgotPassword-form-container .link {
+  color: #1778f2;
+  text-decoration: none;
+}
+.forgotPassword-form-container .signup-link {
+  align-self: center;
+  font-weight: 500;
+}
+.forgotPassword-form-container .signup-link .link {
+  font-weight: 400;
+}
+.forgotPassword-form-container .link:hover {
+  text-decoration: underline;
+}
+/* ______________________Forgot password form __________________________ */
 
 /* Admin */
 .sidebar {
