--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -7,7 +7,7 @@
             <p> Hi. Welcome back to CineSeats Admin!</p>
             <div class="cards">
                 <!-- Total Tickets -->
-                <div class="card">
+                <div class="card-dashboard">
                     <div class="icon" style="background-color: #ff9800;">
                         <i class="fa fa-ticket-alt"></i>
                     </div>
@@ -18,7 +18,7 @@
                 </div>
 
                 <!-- Total Users -->
-                <div class="card">
+                <div class="card-dashboard">
                     <div class="icon" style="background-color: #4caf50;">
                         <i class="fa fa-user"></i>
                     </div>
@@ -29,7 +29,7 @@
                 </div>
 
                 <!-- Total Revenue -->
-                <div class="card">
+                <div class="card-dashboard">
                     <div class="icon" style="background-color: #f44336;">
                         <i class="fa fa-dollar-sign"></i>
                     </div>
