--- a/views/partials/sidebar2.hbs
+++ b/views/partials/sidebar2.hbs
@@ -1,8 +1,7 @@
-<section class="bg-dark d-flex">
-    <aside class="bg-dark text-white p-4" style="width: 240px">
+<section class="bg-sidebar2 d-flex">
+    <aside class="bg-sidebar2 text-white p-4" style="width: 240px">
         <!-- Logo -->
-        <div class="d-flex align-items-center mb-4">
-            <img src="https://placehold.co/40x40" alt="Logo" class="me-2" />
+        <div class="d-flex align-items-center justify-content-center mb-5">
             <span class="h4 mb-0">CINESEATS</span>
         </div>
 
@@ -24,12 +23,12 @@
                         <i class="fa-solid fa-address-card me-2"></i> <span>General</span>
                     </a>
                 </li>
-                <li class="mb-3">
+                {{!-- <li class="mb-3">
                     <a href="/account/membership"
                         class="d-flex align-items-center p-2 text-white text-decoration-none hover-bg-secondary rounded">
                         <i class="fa-regular fa-credit-card me-2"></i> <span>Membership Card</span>
                     </a>
-                </li>
+                </li> --}}
                 <li class="mb-3">
                     <a href="/account/voucher"
                         class="d-flex align-items-center p-2 text-white text-decoration-none hover-bg-secondary rounded">
